--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Seun - Power Platform Developer & Business Solutions Architect specializing in Microsoft Power Platform, Dynamics 365 CRM, and business process automation">
+    <meta name="description" content="Seun Gabriel Ogunwande - Power Platform Developer & Business Solutions Architect specializing in Microsoft Power Platform, Dynamics 365 CRM, and business process automation">
     <meta name="keywords" content="Power Platform, Dynamics 365, Power Apps, Power Automate, Business Solutions, Azure, CRM">
-    <meta name="author" content="Seun">
+    <meta name="author" content="Seun Gabriel Ogunwande">
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Seun | Power Platform Developer">
+    <meta property="og:title" content="Seun Gabriel Ogunwande | Power Platform Developer">
     <meta property="og:description" content="Power Platform Developer & Business Solutions Architect">
     <meta property="og:type" content="website">
 
-    <title>Seun | Power Platform Developer</title>
+    <title>Seun Gabriel Ogunwande | Power Platform Developer</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-brand">
-                <a href="#hero">Seun</a>
+                <a href="#hero">Seun Gabriel Ogunwande</a>
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation menu">
                 <span class="hamburger"></span>
@@ -40,7 +40,7 @@
         <!-- Hero Section -->
         <section id="home" class="hero-section">
             <div class="hero-content">
-                <h1 class="hero-name fade-in">Seun</h1>
+                <h1 class="hero-name fade-in">Seun Gabriel Ogunwande</h1>
                 <p class="hero-title fade-in">Power Platform Developer & Business Solutions Architect</p>
                 <a href="#projects" class="btn btn-primary fade-in">View My Work</a>
             </div>
@@ -51,7 +51,7 @@
             <div class="container">
                 <h2 class="section-title slide-up">About Me</h2>
                 <div class="about-content slide-up">
-                    <p>I'm Seun, a Power Platform Developer and Business Solutions Architect specializing in transforming business processes through intelligent automation and modern cloud solutions.</p>
+                    <p>I'm Seun Gabriel Ogunwande, a Power Platform Developer and Business Solutions Architect specializing in transforming business processes through intelligent automation and modern cloud solutions.</p>
                     <p>With deep expertise in Microsoft Power Platform, Dynamics 365 CRM, and Azure, I design and build scalable solutions that bridge the gap between business needs and technical implementation. My work focuses on creating efficient workflows, integrating complex systems, and empowering organizations to do more with less.</p>
                     <p>I'm passionate about leveraging low-code platforms to accelerate digital transformation while maintaining enterprise-grade security and governance standards.</p>
                 </div>
@@ -198,7 +198,7 @@
                     <div class="contact-info slide-up">
                         <p>Interested in collaborating or discussing Power Platform solutions? Let's connect!</p>
                         <div class="social-links">
-                            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
+                            <a href="https://linkedin.com/in/Seun Gabriel Ogunwande-ogunwande-1a8920109" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                                 </svg>
@@ -233,9 +233,9 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Seun. All rights reserved.</p>
+            <p>&copy; 2024 Seun Gabriel Ogunwande. All rights reserved.</p>
             <div class="footer-links">
-                <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://linkedin.com/in/Seun Gabriel Ogunwande-ogunwande-1a8920109" target="_blank" rel="noopener noreferrer">LinkedIn</a>
             </div>
         </div>
     </footer>
